--- a/.github/workflows/rebuild_userguide.yml
+++ b/.github/workflows/rebuild_userguide.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         rm -rf guide
         mkdir guide
-        git clone git@github.com:MGX-metagenomics/userguide.git
+        git clone https://github.com/MGX-metagenomics/userguide.git
         cd userguide
         make
         mv main/* ../guide/
